tests/samples/negative/types/enum_base_non_integer.ax
module enum_base_non_integer;

enum Flag: bool {
    no = 0,
    yes = 1,
}

fn main() -> i32 {
    return 0;
}
